[gd_scene load_steps=11 format=3 uid="uid://dw1avd6aemusn"]

[ext_resource type="Script" uid="uid://sub8stn1lvk3" path="res://01_Main_Screen/02_Levels_Collection/scripts/lessons_collection.gd" id="1_ixd7m"]
[ext_resource type="Texture2D" uid="uid://sy1ve0xswk3m" path="res://01_Main_Screen/02_Levels_Collection/assests/123.png" id="2_wdepd"]
[ext_resource type="Texture2D" uid="uid://dq2snok3vsf35" path="res://01_Main_Screen/02_Levels_Collection/assests/Capital_ABC.png" id="3_pi0gw"]
[ext_resource type="Texture2D" uid="uid://crc8e5wqpi0w2" path="res://01_Main_Screen/02_Levels_Collection/assests/Small_abc.png" id="4_a12g7"]
[ext_resource type="Texture2D" uid="uid://drrxxs5rpwapx" path="res://01_Main_Screen/02_Levels_Collection/assests/AakDuiTin.png" id="5_wdepd"]
[ext_resource type="Texture2D" uid="uid://bybto8xldaovu" path="res://01_Main_Screen/02_Levels_Collection/assests/KaKhaGa.png" id="6_uh5a1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qohvb"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5lf6"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2olpj"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7p5hd"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 10

[node name="Lessons_Collection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ixd7m")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 100
columns = 3

[node name="Control" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="123" type="Button" parent="GridContainer/Control" groups=["button_sound"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_qohvb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5lf6")
theme_override_styles/hover = SubResource("StyleBoxFlat_2olpj")
theme_override_styles/focus = SubResource("StyleBoxFlat_7p5hd")
icon = ExtResource("2_wdepd")
icon_alignment = 1
expand_icon = true

[node name="Control2" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ABC" type="Button" parent="GridContainer/Control2" groups=["button_sound"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_qohvb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5lf6")
theme_override_styles/hover = SubResource("StyleBoxFlat_2olpj")
theme_override_styles/focus = SubResource("StyleBoxFlat_7p5hd")
icon = ExtResource("3_pi0gw")
icon_alignment = 1
expand_icon = true

[node name="Control3" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="abc" type="Button" parent="GridContainer/Control3" groups=["button_sound"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_qohvb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5lf6")
theme_override_styles/hover = SubResource("StyleBoxFlat_2olpj")
theme_override_styles/focus = SubResource("StyleBoxFlat_7p5hd")
icon = ExtResource("4_a12g7")
icon_alignment = 1
expand_icon = true

[node name="Control4" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AakDuiTin" type="Button" parent="GridContainer/Control4" groups=["button_sound"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_qohvb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5lf6")
theme_override_styles/hover = SubResource("StyleBoxFlat_2olpj")
theme_override_styles/focus = SubResource("StyleBoxFlat_7p5hd")
icon = ExtResource("5_wdepd")
icon_alignment = 1
expand_icon = true

[node name="Control5" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KaKhaGa" type="Button" parent="GridContainer/Control5" groups=["button_sound"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_qohvb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5lf6")
theme_override_styles/hover = SubResource("StyleBoxFlat_2olpj")
theme_override_styles/focus = SubResource("StyleBoxFlat_7p5hd")
icon = ExtResource("6_uh5a1")
icon_alignment = 1
expand_icon = true

[connection signal="button_down" from="GridContainer/Control/123" to="." method="_on__button_down"]
[connection signal="button_up" from="GridContainer/Control/123" to="." method="_on__button_up"]
